[package]
name = "tblcompare"
version = "0.1.0"
authors = ["Arpan Kapoor <a@arpankapoor.com>"]
edition = "2021"
description = "A tabular data comparison utility"

[dependencies]
anyhow = "1.0.64"
bitvec = "1.0.1"
byte-slice-cast = "1.2.1"
clap = { version = "3.2.21", features = ["cargo", "derive"] }
csv = "1.1.6"
env_logger = "0.9.0"
#indexmap = { version = "1.8.2", features = ["rayon"] }
indexmap = "1.9.1"
itertools = "0.10.3"
log = "0.4.17"
memmap2 = "0.5.7"
# rayon = "1.5.3"
string-interner = "0.14.0"
tempfile = "3.3.0"
url = "2.3.1"
webbrowser = "0.8.0"

[profile.release]
lto = true
codegen-units = 1
